@@ -1,3 +1,8 @@
+2009-06-23  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20090622-1
+	* Upstream update
+
 2009-04-13  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20090408-1
